# qtsamples

chap02/find/: CMakeLists.txt  Makefile
